--- a/工具/2.gulp/src/css/1.less
+++ b/工具/2.gulp/src/css/1.less
@@ -1,7 +1,15 @@
+.logo {
+    width: 80px;
+    height: 80px;
+    background-image: url('../images/logo.png');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: contain;
+}
 .header {
     font-size: 14px;
     color: bisque;
-    background-color: #aaa;
+    background-color: red;
     .title {
         font-size: 16px;
         color: blue;
@@ -15,4 +23,10 @@
             margin-left: 4px;
         }
     }
+}
+
+.img-box{
+    width: 100px;
+    height: 100px;
+    background: url('../images/yay.jpg') no-repeat;
 }
